--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,15 +22,13 @@ jobs:
           bundler-cache: true
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Publish to GPR
-        if: ${{ steps.release.outputs.release_created }}
+      - name: Publish to RubyGems
         run: |
           mkdir -p $HOME/.gem
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
           gem build *.gemspec
-          gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
+          gem push *.gem
         env:
-          GEM_HOST_API_KEY: "Bearer ${{secrets.NEW_GITHUB_TOKEN}}"
-          OWNER: ${{ github.repository_owner }}
+          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
