update codewoners and add github-actions

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-*                         @bugloper
-.github/                  @bugloper @SELISEdigitalplatforms/DEVOPS-ADMIN-ALL-REPOS
-CODEOWNERS                @bugloper @SELISEdigitalplatforms/DEVOPS-ADMIN-ALL-REPOS
+*                         @SELISEdigitalplatforms/oss-maintainers-gem-gotenberg
