--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,9 +15,10 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
       # Setup ruby if a release was created
       - uses: ruby/setup-ruby@v1
+      
         with:
           # Not needed with a .ruby-version file
-          ruby-version: 3.2.2
+          ruby-version: ruby
           # runs 'bundle install' and caches installed gems automatically
           bundler-cache: true
         if: ${{ steps.release.outputs.release_created }}
